# secapi2-adapter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md
.github/workflows/: ci.yaml
cmake/: FindSACLIENT.cmake
include/: sec_security.h  sec_security_asn1kc.h  sec_security_comcastids.h  sec_security_common.h  sec_security_datatype.h  sec_security_store.h  sec_security_svp.h  sec_security_utils.h  sec_version.h
src/: sec_adapter_asn1kc.c  sec_adapter_buffer.c  sec_adapter_bundle.c  sec_adapter_bundle.h  sec_adapter_certificate.c  sec_adapter_cipher.c  sec_adapter_cipher.h  sec_adapter_common.c  sec_adapter_digest.c  sec_adapter_engine.c  sec_adapter_key.c  sec_adapter_key.h  sec_adapter_key_legacy.h  sec_adapter_keyexchange.c  sec_adapter_logger.c  sec_adapter_mac.c  sec_adapter_processor.c  sec_adapter_processor.h  sec_adapter_pubops.c  sec_adapter_pubops.h  sec_adapter_random.c  sec_adapter_signature.c  sec_adapter_soc_provisioning.c  sec_adapter_soc_provisioning.h  sec_adapter_store.c  sec_adapter_store.h  sec_adapter_svp.c  sec_adapter_svp.h  sec_adapter_utils.c  sec_adapter_utils.h  sec_adapter_utils_time.c
test/: valgrind.supp
test/main/cpp/: bundle.cpp  bundle.h  cert.cpp  cert.h  cipher.cpp  cipher.h  concurrent.cpp  concurrent.h  digest.cpp  digest.h  exchange.cpp  exchange.h  jtype.cpp  jtype.h  key.cpp  key.h  keyctrl.cpp  keyctrl.h  mac.cpp  mac.h  processor.cpp  processor.h  random.cpp  random.h  sec_api_utest_main.cpp  sec_api_utest_main.h  sign.cpp  sign.h  svp.cpp  svp.h  test_creds_clear.cpp  test_ctx.cpp  wrapped.cpp  wrapped.h
test/main/headers/: test_creds.h  test_ctx.h
test/openssl/headers/: sa_soc_key_container.h  test_creds.h  test_ctx.h
test/openssl/src/: sa_soc_key_container.cpp  test_creds_soc.cpp
